# data-pipeline

./: .env  .gitignore  README.md  dataframe.csv  dataframe2.csv  main.py  pyproject.toml  run_pipeline.py
output/: analises.json  eda.md  resultados.md
src/crews/crew_define_analyses/: crew.py
src/crews/crew_define_analyses/config/: agents.yaml  tasks.yaml
src/crews/crew_ebook/: crew.py  main_ebook.py
src/crews/crew_ebook/config/: agents.yaml  tasks.yaml
src/crews/crew_eda/: crew.py
src/crews/crew_eda/config/: agents.yaml  tasks.yaml
src/crews/crew_execute_analyses/: crew.py
src/crews/crew_execute_analyses/config/: agents.yaml  tasks.yaml
src/flow/: pipeline_flow.py
